--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="main">
+	<div 
 		<h1 id="heading">This is a Heading</h1>
 	</div>
     <script type="text/javascript" src="./script.js">
